# vocabulearn

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  data.rs  main.rs
